# market-backend

./: alembic.ini  app.py  bot.py  deposit.py  fill.py  pyproject.toml  subscribe.py
migrations/: env.py
migrations/versions/: 0370646c91d9_.py  0b6c39a32513_.py  360197cab43d_.py  5026922852e0_.py  89e31d697333_.py  a6e4cc210a17_.py  d5f6ff3fb104_.py  df7298c81309_.py  f7d30ae53d4b_.py
src/api/: _router.py
src/api/deposit/: _router.py  _schemas.py
src/api/market/: _router.py  _schemas.py
src/api/number/: _router.py  _schemas.py
src/api/swap/: _router.py  _schemas.py
src/api/token/: _router.py  _schemas.py
src/api/user/: _router.py  _schemas.py
src/api/username/: _router.py  _schemas.py
src/api/withdrawal/: _router.py  _schemas.py
src/bot/: __init__.py
src/bot/handlers/: __init__.py  _commission.py  _const.py  _fee.py  _main.py  _number.py  _stats.py  _user.py  _username.py  _wallet.py
src/bot/keyboards/: __init__.py  _commission.py  _const.py  _fee.py  _main.py  _user.py  _wallet.py
src/common/: __init__.py  _balancer.py  _config.py  _constants.py  _logger.py  _redis.py
src/database/: __init__.py  _engine.py  _enums.py  _models.py
src/repo/account/: __init__.py  _account.py
src/repo/admin/: __init__.py  _admin.py
src/repo/fill/: __init__.py  _fill.py
src/repo/history/: __init__.py  _history.py
src/repo/market/: __init__.py  _market.py
src/repo/number/: __init__.py  _number.py
src/repo/user/: _user.py
src/repo/username/: __init__.py  _username.py
src/service/account/: __init__.py  (+2 more)
src/utils/: formatters.py  messages.py
(+37 files in other folders)
